syntax = "proto3";

package delivery;

service DeliveryPersonService {
  rpc GetDeliveryPerson (GetDeliveryPersonRequest) returns (DeliveryPersonResponse);
  rpc FindAvailableDeliveryPersons (FindAvailableRequest) returns (DeliveryPersonsList);
  rpc UpdateDeliveryPersonStatus (UpdateStatusRequest) returns (DeliveryPersonResponse);
  rpc UpdateDeliveryPersonLocation (UpdateLocationRequest) returns (DeliveryPersonResponse);
}

service DeliveryService {
  rpc GetDeliveryByOrder (GetDeliveryByOrderRequest) returns (DeliveryResponse);
  rpc GetActiveDeliveries (GetActiveDeliveriesRequest) returns (DeliveriesList);
  rpc GetDeliveriesByDeliveryPerson (GetDeliveriesByDeliveryPersonRequest) returns (DeliveriesList);
  rpc AssignDelivery (AssignDeliveryRequest) returns (DeliveryResponse);
  rpc CreateDelivery (CreateDeliveryRequest) returns (DeliveryResponse);
}

message GetActiveDeliveriesRequest {
  repeated string statuses = 1;
}

message GetDeliveriesByDeliveryPersonRequest {
  int32 deliveryPersonId = 1;
}

message GetDeliveryPersonRequest {
  int32 deliveryPersonId = 1;
}

message FindAvailableRequest {
  double latitude = 1;
  double longitude = 2;
  double radiusKm = 3;
  string vehicleType = 4;
}

message UpdateStatusRequest {
  string deliveryPersonId = 1;
  string status = 2;
}

message UpdateLocationRequest {
  string deliveryPersonId = 1;
  double latitude = 2;
  double longitude = 3;
  double speed = 4;
  double heading = 5;
  double accuracy = 6;
}

message DeliveryPersonResponse {
  bool success = 1;
  DeliveryPerson deliveryPerson = 2;
}

message DeliveryPerson {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string vehicleType = 5;
  string licensePlate = 6;
  string status = 7;
  double rating = 8;
  int32 totalDeliveries = 9;
  double currentLatitude = 10;
  double currentLongitude = 11;
  string lastLocationUpdate = 12;
  bool isActive = 13;
}

message DeliveryPersonsList {
  repeated DeliveryPerson deliveryPersons = 1;
}

message GetDeliveryByOrderRequest {
  int32 orderId = 1;
}

message DeliveryResponse {
  bool success = 1;
  string message = 2;
  Delivery delivery = 3;
}

message Delivery {
  int32 id = 1;
  int32 orderId = 2;
  int32 deliveryPersonId = 3;
  string status = 4;
  double customerLatitude = 5;
  double customerLongitude = 6;
  string customerAddress = 7;
  string assignedAt = 8;
  string pickedUpAt = 9;
  string deliveredAt = 10;
  int32 estimatedDeliveryTime = 11;
  DeliveryPersonInfo deliveryPerson = 12;
}

message DeliveryPersonInfo {
  int32 id = 1;
  string name = 2;
  string phone = 3;
  string vehicleType = 4;
  double currentLatitude = 5;
  double currentLongitude = 6;
  string status = 7;
}

message DeliveriesList {
  bool success = 1;
  repeated Delivery deliveries = 2;
}

message AssignDeliveryRequest {
  int32 orderId = 1;
  int32 deliveryPersonId = 2;
}

message CreateDeliveryRequest {
  int32 orderId = 1;
  double customerLatitude = 2;
  double customerLongitude = 3;
  string customerAddress = 4;
}
